Fixes Bug 1047562 - Fixing cut off text in mobile breakpoints. Centering thumbnail image.

--- a/less/style.less
+++ b/less/style.less
@@ -671,15 +671,15 @@ img {
  * ABOUT
  */
 .about-hello {
-  p {
-    width: 500px;
-  }
   img {
     float: right;
     margin-left: 20px;
+    @media only screen and (max-width: @width-small) {
+      float: none;
+      display: block;
+      margin: 0 auto;
+    }
   }
-
-
 }
 
 #about {
